--- a/demo-app-buildconfig.json
+++ b/demo-app-buildconfig.json
@@ -2,7 +2,7 @@
    "kind": "BuildConfig",
    "apiVersion": "v1",
    "metadata": {
-      "name": "demo-app-docker-build"
+      "name": "demo-app-docker-rest-build"
    },
    "spec": {
       "triggers": [
@@ -13,7 +13,7 @@
       "source": {
          "type": "Git",
          "git": {
-            "uri": "git://github.com/flaviomu/demo-app.git"
+            "uri": "git://github.com/flaviomu/demo-app-docker-cli.git"
          }
       },
       "strategy": {
@@ -28,7 +28,7 @@
       "output": {
          "to": {
             "kind": "DockerImage",
-            "name": "172.30.54.3:5000/user-project/demo-app-docker"
+            "name": "172.30.54.3:5000/user-project/demo-app-docker-rest"
          }
       }
    }
