--- a/demo-app-imagestream.json
+++ b/demo-app-imagestream.json
@@ -2,8 +2,7 @@
    "kind": "ImageStream",
    "apiVersion": "v1",
    "metadata": {
-      "name": "demo-app-docker",
-      "creationTimestamp": null
+      "name": "demo-app-docker-rest"
    },
    "spec": {},
    "status": {
